--- a/styles/bootstrap.scss
+++ b/styles/bootstrap.scss
@@ -41,6 +41,17 @@ $gutters: (
   36: 2.25rem
 );
 
+$position-values: (
+  0: 0,
+  20:20%,
+  25:25%,
+  30:30%,
+  35:35%,
+  40:40%,
+  50: 50%,
+  100: 100%
+);
+
 $font-sizes: (
   1: $h1-font-size,
   2: $h2-font-size,
