add Carousel button

--- a/styles/bootstrap.scss
+++ b/styles/bootstrap.scss
@@ -26,7 +26,7 @@ $spacers: (
   6: $spacer * 3,
   7: $spacer * 4,
   8: $spacer * 5,
-  9: $spacer * 7,
+  9: $spacer * 6,
   10: $spacer * 10,
 );
 
@@ -49,6 +49,8 @@ $position-values: (
   35:35%,
   40:40%,
   50: 50%,
+  60: 60%,
+  75: 75%,
   100: 100%
 );
 
