Update refactor code

--- a/styles/components/card.scss
+++ b/styles/components/card.scss
@@ -1,5 +1,5 @@
-.card {
+.cardshadow {
   background: rgba(247, 252, 252, 0.8);
   box-shadow: 15px 15px 20px rgba(57, 124, 116, 0.08), -15px -15px 20px rgba(255, 255, 255, 0.7);
-  border-radius: 30px;
+  border-radius: 4px;
 }
