--- a/styles/bootstrap.scss
+++ b/styles/bootstrap.scss
@@ -31,6 +31,7 @@ $spacers: (
   8: $spacer * 5,
   9: $spacer * 6,
   10: $spacer * 10,
+  15: $spacer * 15,
 );
 
 $gutters: (
@@ -46,6 +47,8 @@ $gutters: (
 
 $position-values: (
   0: 0,
+  10:10%,
+  15:15%,
   20:20%,
   25:25%,
   30:30%,
@@ -54,6 +57,7 @@ $position-values: (
   50: 50%,
   60: 60%,
   75: 75%,
+  80: 80%,
   100: 100%
 );
 
@@ -67,7 +71,9 @@ $font-sizes: (
   14: 0.875rem,
   18: 1.125rem,
   22: 1.375rem,
+  24: 1.5rem,
   26: 1.625rem,
+  60: 3.75rem,
   160: 10rem,
 
 );
@@ -145,7 +151,7 @@ $utilities: map-merge($utilities,
 // @import "bootstrap/scss/button-group";
 // @import "bootstrap/scss/nav";
 // @import "bootstrap/scss/navbar";
-// @import "bootstrap/scss/card";
+@import "bootstrap/scss/card";
 // @import "bootstrap/scss/accordion";
 // @import "bootstrap/scss/breadcrumb";
 // @import "bootstrap/scss/pagination";
