--- a/styles/bootstrap.scss
+++ b/styles/bootstrap.scss
@@ -70,6 +70,7 @@ $font-sizes: (
   6: $h6-font-size,
   14: 0.875rem,
   18: 1.125rem,
+  20: 1.25rem,
   22: 1.375rem,
   24: 1.5rem,
   26: 1.625rem,
