--- a/styles/components/animation.scss
+++ b/styles/components/animation.scss
@@ -2,3 +2,6 @@
   box-shadow: 15px 15px 20px rgba(57, 124, 116, 0.08), -15px -15px 20px rgba(255, 255, 255, 0.7);
   transition: all .2s ease-out;
 }
+#header{
+  transition: top 2s;
+}
